third_party/WebKit/Source/platform/graphics/ExpensiveCanvasHeuristicParameters.h
@@ -67,6 +67,13 @@ enum {
 
   GetImageDataForcesNoAcceleration = 1,
 
+  // Whan a canvas is used as a source image, if its destination is
+  // non-accelerated and the source canvas is accelerated, a readback
+  // from the gpu is necessary. This option cause the source canvas to
+  // switch to non-accelerated when this situation is encountered to
+  // prevent future canvas to canvas draws from requiring a readback.
+  DisableAccelerationToAvoidReadbacks = 1,
+
   // When drawing very large images to canvases, there is a point where
   // GPU acceleration becomes inefficient due to texture upload overhead,
   // especially when the image is large enough that it is likely to
